# noresm-aerocom-converter

./: .gitignore  README.md  pyproject.toml
noresm-aerocom-converter/: conversion_instructions.py  conversions.yaml  main.py  test.yaml
noresm_aerocom_converter/: conversion_instructions.py  conversions.yaml  main.py  test.yaml
noresm_aerocom_converter/data/: conversions.yaml  conversions_raw.yaml  test.yaml
